# bear16

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  asm.cpp  asm.h  assembler.cpp  assembler.h  assembly.cpp  assembly.h  cli.cpp  cli.h  compile_commands.json  core.cpp  core.h  emu.cpp  emu.h  expr_resolver.cpp  expr_resolver.h  fixpt8_8_t.h  fixpt_16.h  isa.h  main.cpp  parts.cpp  parts.h  preprocess.cpp  preprocess.h
.cache/clangd/index/: SDL.h.F65CB6AC5BAA3D2E.idx  SDL_assert.h.0A20568B3CAE633A.idx  SDL_atomic.h.F93119AEB8389BA8.idx  SDL_audio.h.66D457D40829AFC2.idx  SDL_blendmode.h.738DEDF37DFC0364.idx  SDL_clipboard.h.BB3A4EDAA214AF4B.idx  SDL_config.h.EACC4462424F598C.idx  SDL_config_macosx.h.1E2BA871602C878A.idx  SDL_cpuinfo.h.CC5D4ECB4661C5E3.idx  SDL_endian.h.AE7B2DAB24D90DA9.idx  SDL_error.h.F5EA57DA6BDA56DF.idx  SDL_events.h.E446124C8E366288.idx  SDL_filesystem.h.89AC2FB4505F59FE.idx  SDL_gamecontroller.h.D23C5502B9924BF1.idx  SDL_gesture.h.32A1F05E92FC2CD0.idx  SDL_guid.h.F10DCA8EC8FA5546.idx  SDL_haptic.h.EC19514D1675DB0E.idx  SDL_hidapi.h.0B847D85AE31A51D.idx  SDL_hints.h.C9C600F0A3E8AFB4.idx  SDL_joystick.h.40D94AB44DCECF16.idx  SDL_keyboard.h.B40DCE9730ED9CB6.idx  SDL_keycode.h.0478C4EB57D41E17.idx  SDL_loadso.h.CDBC608451A434D5.idx  SDL_locale.h.B3FD6E97451084CC.idx  SDL_log.h.305FBA941B164F71.idx  SDL_main.h.5CA07069C4927D91.idx  SDL_messagebox.h.5BB63DAC2C3981D5.idx  SDL_metal.h.6491B09FC10E0F80.idx  SDL_misc.h.730EBABB035CE5E0.idx  SDL_mouse.h.08801D2D4677C428.idx  SDL_mutex.h.C9F2E068194595A1.idx  SDL_pixels.h.5048E4635BAC907D.idx  SDL_platform.h.1E51E3EBDDF4DD1D.idx  SDL_power.h.CD2A520D26BBCFEB.idx  SDL_quit.h.49EAD580D2F7140B.idx  SDL_rect.h.04158A4EBE30DEB0.idx  SDL_render.h.88986F5F38737E06.idx  SDL_rwops.h.2B02D85DAF59B980.idx  SDL_scancode.h.96842182BAEBEB02.idx  SDL_sensor.h.F2B76B81699B4CB7.idx  (+27 more)
SDL2.framework/Headers/: SDL_audio.h
SDL2.framework/Versions/Current/Headers/: SDL_guid.h
config_b16/: config.json  config_info.txt
dependencies/SDL2.framework/Versions/A/Headers/: SDL_audio.h  SDL_guid.h
examples/: check_out_bear16_os.txt
examples/legacy/: 20250613_quadratic_calc.asm  20250617_first_full_ascii.asm  20250619_os_wip_working_ver.asm  fibonacci.asm
examples/legacy/raw-binary_programs/: hex_prog.txt
libs/SDL2-2.32.8/cmake/: sdl2-config.cmake
libs/SDL2.framework/Versions/A/Resources/CMake/: sdl2-config.cmake
programs/: asm_test.asm  hex_scratch_prog.txt
programs/asm_example_programs/: 20250612_array_counter.asm  20250612_string_struct_test.asm  20250613_quadratic_calc.asm  20250616_first_hello_world_to_framebuffer.asm  20250616_hi.asm  fibonacci.asm
programs/kernel_versions/: kv_001.asm
projects/: asm_test.asm
projects/bear16_os/: app_dispatch.asm  cmd_dispatch.asm  console.asm  console_dispatch.asm  console_maps.asm  main.asm  math.asm  os_core.asm  test.asm  text_editor_app.asm  text_processing.asm  util_disk_io.asm  util_mem_manager.asm  util_misc.asm
projects/bear16_os/apps/: notepad.asm  tictactoe.asm  tictactoe_assets.asm
projects_b16/: bin_prog.txt
projects_b16/kernel_versions/: kv_001.asm
projects_b16/legacy/: 20250612_asm_test.asm  fibonacci.asm
resources/: help_message_cli.txt  help_message_tui.txt
scripts/src/: bitmap_gen.py  img_to_bitmap.py  opcode_gen.py  trig_table_gen.py
src/: assembly.cpp  bear16.cpp  cli_args.cpp  core.cpp  emu.cpp  expr_resolver.cpp  main.cpp  parts.cpp  path_manager.cpp  preprocess.cpp
src/include/: assembly.h  bear16.h  cli_args.h  core.h  emu.h  expr_resolver.h  fixpt8_8_t.h  help_messages.h  isa.h  parts.h  path_manager.h  preprocess.h
tui/: config.json  help_message.txt
